--- a/MiniProject/.classpath
+++ b/MiniProject/.classpath
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
+	<classpathentry kind="src" path="src"/>
+	<classpathentry excluding="src/" kind="src" path=""/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="src" path="src"/>
 	<classpathentry exported="true" kind="lib" path="C:/[Setup Files]/mybatis-3.5.9.jar"/>
 	<classpathentry exported="true" kind="lib" path="C:/[Setup Files]/ojdbc6.jar"/>
-	<classpathentry kind="lib" path="D:/user/Desktop/MemoCalendar_1.jar"/>
+	<classpathentry exported="true" kind="lib" path="D:/user/Desktop/MemoCalendar_1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
